swagger.yaml; routes created; routes checked on browseer http://localhost:8000/api-docs and Postman
