# server/routes/authRoutes.js
@@ -1,16 +1,8 @@
-const express = require("express");
+const express = require('express');
+const { signup, login } = require('../controllers/authController');
 const router = express.Router();
 
-router.post("/login", (req, res) => {
-    console.log("Login route is here!", req.body);
-    const { email, password } = req.body;
-    res.status(200).json({ token: "mock-jwt-token" });
-});
-
-router.post("/signup", (req, res) => {
-    console.log("Signup route is here!", req.body);
-    const { full_name, email, password } = req.body;
-    res.status(200).json({ message: "User created successfully", username: email });
-});
+router.post('/signup', signup);
+router.post('/login', login);
 
 module.exports = router;
