# server/routes/teammemberRoutes.js
@@ -1,0 +1,8 @@
+const express = require('express');
+const { addTeamMember } = require('../controllers/teamMemberController');
+const { protect } = require('../middlewares/authMiddleware');
+const router = express.Router();
+
+router.post('/', protect, addTeamMember);
+
+module.exports = router;
